--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,42 @@
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
+
+<div class="section">
+  <div class="container">
+
+
+    <div class="wrapper">
+      <div class="banner">
+        <div class="banner__arrow"></div>
+        <div class="banner__center">
+          <span><i class="fa fa-user banner__pic" aria-hidden="true"></i></span>
+        </div>
+      </div>
+      <!--<div class="profile">-->
+        <div class="profile__name">
+          <span class="icon"></span>
+          <span>Brit Butler</span>
+        </div>
+        <div class="profile__email">
+          <span class="icon__two"></span>
+          <span>butler@email.com</span>
+        </div>
+        <div class="profile__phone">
+          <span class="icon__three"></span>
+          <span>(000)-000-0000</span>
+        </div>
+        <div class="profile__local">
+          <span class="icon__four"></span>
+          <span>Nashville, Tennessee</span>
+        </div>
+      <!--</div>-->
+    </div>
+  </div>
+</div>
+
+
+
   <script src="/app.js" charset="utf-8"></script>
 </body>
 </html>
