--- a/public/index.html
+++ b/public/index.html
@@ -13,19 +13,19 @@
 
     <div class="wrapper">
       <div class="banner">
-        <div class="banner__arrow"></div>
+        <span class="banner__arrow"><i class="fa fa-arrow-left" aria-hidden="true"></i></span>
         <div class="banner__center">
-          <span><i class="fa fa-user banner__pic" aria-hidden="true"></i></span>
+          <img src="https://image.freepik.com/free-icon/male-user-close-up-shape-for-facebook_318-37635.jpg" alt="" class="banner__pic">
         </div>
       </div>
-      <!--<div class="profile">-->
+      <div class="profile">
         <div class="profile__name">
           <span class="icon"></span>
-          <span>Brit Butler</span>
+          <span>Alicia Hundley</span>
         </div>
         <div class="profile__email">
           <span class="icon__two"></span>
-          <span>butler@email.com</span>
+          <span>alrose@email.com</span>
         </div>
         <div class="profile__phone">
           <span class="icon__three"></span>
@@ -35,7 +35,7 @@
           <span class="icon__four"></span>
           <span>Nashville, Tennessee</span>
         </div>
-      <!--</div>-->
+      </div>
     </div>
   </div>
 </div>
