--- a/public/index.html
+++ b/public/index.html
@@ -20,20 +20,20 @@
       </div>
       <div class="profile">
         <div class="profile__name">
-          <span><span class="fa fa-user icon" aria-hidden="true"></span>
-          <span>Alicia Hundley</span></span>
+          <span class="fa fa-user icon" aria-hidden="true"></span>
+          <span>Alicia Hundley</span>
         </div>
         <div class="profile__email">
-          <span><span class="fa fa-envelope-o icon" aria-hidden="true"></span>
-          <span>alrose@email.com</span></span>
+          <span class="fa fa-envelope-o icon" aria-hidden="true"></span>
+          <span>alrose@email.com</span>
         </div>
         <div class="profile__phone">
-          <span><span class="fa fa-mobile icon" aria-hidden="true"></span>
-          <span>(000)-000-0000</span></span>
+          <span class="fa fa-mobile icon" aria-hidden="true"></span>
+          <span>(000)-000-0000</span>
         </div>
         <div class="profile__local">
-          <span><span class="fa fa-globe icon" aria-hidden="true"></span>
-          <span>Nashville, Tennessee</span></span>
+          <span class="fa fa-globe icon" aria-hidden="true"></span>
+          <span>Nashville, Tennessee</span>
         </div>
       </div>
     </div>
