--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       <div class="profile">
         <div class="profile__name">
           <span class="fa fa-user icon" aria-hidden="true"></span>
-          <span>Alicia Hundley</span>
+          <span>Alicia</span><span>Hundley</span>
         </div>
         <div class="profile__email">
           <span class="fa fa-envelope-o icon" aria-hidden="true"></span>
